Fixes horizontal scrolling on feed articles

--- a/app/_scss/pages/feed.scss
+++ b/app/_scss/pages/feed.scss
@@ -174,6 +174,6 @@
 
 @media (max-width: 499px) {
 	#lab-feed main article {
-		width: 88%;
+		width: 82%;
 	}
 }
